Add navigation bar

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,1 +1,6 @@
-<h1>Heder Works</h1>
+<nav class="navbar navbar-default">
+  <div class="container-fluid">
+    <a href="#" class="navbar-brand">Recipe Book</a>
+  </div>
+
+</nav>
